 * Maintenance: Deprecate legacy URL redirects in `ModelViewSet` and `SnippetViewSet` (Sage Abdullah)
 * Maintenance: Simplify code for registering page listing action buttons (Matt Westcott)
 * Maintenance: Removed the unused, legacy, Wagtail userbar views set up for an old iframe approach (Sage Abdullah)
 * Maintenance: Optimise `lru_cache` usage (Jake Howard)


5.1.2 (25.09.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Avoid use of `ignore_conflicts` when creating extra permissions for snippets, for SQL Server compatibility (Sage Abdullah)
 * Fix: Ensure sequence on `wagtailsearchpromotions_query` table is correctly set after migrating data (Jake Howard)
 * Fix: Change spreadsheet export headings to match listing view column headings (Christer Jensen, Sage Abdullah)
 * Fix: Fix numbers, booleans, and `None` from being exported as strings (Christer Jensen)
 * Fix: Restore fallback on full-word search for snippet choosers and generic index views (Matt Westcott)
 * Fix: Restore compatibility with pre-7.15 versions of the Elasticsearch Python library, allowing use of Opensearch (Matt Westcott)
 * Fix: Fix error when pickling BaseSiteSetting instances (Matt Westcott)
 * Maintenance: For Python 3.13 support - upgrade Willow to v1.6.2, replace `imghdr` with Willow's built-in MIME type detection (Jake Howard)


5.1.1 (14.08.2023)
~~~~~~~~~~~~~~~~~~

 * Introduce `wagtail.admin.ui.tables.BooleanColumn` to display boolean values as icons (Sage Abdullah)
 * Fix: Show not-`None` falsy values instead of blank in generic table cell template (Sage Abdullah)
 * Fix: Fix `read_only` panels for fields with translatable choice labels (Florent Lebreton)


5.1 (01.08.2023)
~~~~~~~~~~~~~~~~

 * Add support for read-only FieldPanels (Andy Babic)
 * Add support for query-time boosting to Elasticsearch 6 and above (Shohan Dutta Roy)
 * Add support for Elasticsearch 8 (Matt Westcott, Wesley van Lee)