@@ -96,6 +96,7 @@ depth: 1
  * Simplify code for registering page listing action buttons (Matt Westcott)
  * Removed the unused, legacy, Wagtail userbar views set up for an old iframe approach (Sage Abdullah)
  * Optimise `lru_cache` usage (Jake Howard)
+ * Implement `date_since`` in `get_most_popular`` inside `search_promotions.models.Query (TopDevPros)
 
 
 ## Upgrade considerations - changes affecting all projects
