@@ -75,6 +75,7 @@ Changelog
  * Maintenance: Simplify code for registering page listing action buttons (Matt Westcott)
  * Maintenance: Removed the unused, legacy, Wagtail userbar views set up for an old iframe approach (Sage Abdullah)
  * Maintenance: Optimise `lru_cache` usage (Jake Howard)
+ * Maintenance: Implement `date_since`` in `get_most_popular`` inside `search_promotions.models.Query (TopDevPros)
 
 
 5.1.2 (25.09.2023)
